# aicontext

./: project_context.json  pyproject.toml  readme.md  requirements.txt
aicontext/: __main__.py  cli.py
aicontext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aicontext/analysis/: dependencies.py  entrypoints.py
aicontext/exporters/: json_exporter.py
aicontext/extractors/: registry.py
aicontext/extractors/java/: __init__.py  core.py
aicontext/extractors/javascript/: __init__.py  core.py
aicontext/extractors/python/: __init__.py  core.py  frameworks.py  routes.py
aicontext/renderers/: tree.py
aicontext/scanner/: fs.py
